# scm-concrete-strength-ml

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: streamlit_app.py
data/: README.md  synthetic_example.csv
docs/: methodology.md  reproducibility.md
examples/: end_to_end.py
scripts/: generate_synthetic_data.py
src/scm_concrete_ml/: __init__.py  cli.py  data.py  evaluation.py  features.py  models.py  optimization.py  uncertainty.py
tests/: test_features_and_data.py  test_models_and_evaluation.py  test_optimization.py  test_uncertainty.py
